SOC-2077 | Fix icon spacing

--- a/front/main/app/styles/module/_discussion.scss
+++ b/front/main/app/styles/module/_discussion.scss
@@ -415,6 +415,10 @@ body.discussions {
 			> * {
 				float: right;
 			}
+
+			span {
+				margin-left: 3px;
+			}
 		}
 
 		.timestamp {
